--- a/ui/html/partials/about.tmpl.html
+++ b/ui/html/partials/about.tmpl.html
@@ -1,12 +1,15 @@
 {{define "about"}}
-<section>
-	<p>
-		This is a place where I'll try new out new technologies, write about
-		things such as; books, tennis and software development.
-	</p>
-	<p>
-		It's not really meant for any audience, more a of a personal
-		place/outlet - but if you do come across this, that's ok.
-	</p>
+<section class="about-section">
+	<img src="/static/img/lh.jpg" alt="" />
+	<article class="about-text">
+		<p>
+			This is a place where I'll try new out new technologies, write about
+			things such as; books, tennis and software development.
+		</p>
+		<p>
+			It's not really meant for any audience, more a of a personal
+			place/outlet - but if you do come across this, that's ok.
+		</p>
+	</article>
 </section>
 {{end}}
