add books and make blogs/books share methods - add pic also

--- a/ui/html/partials/nav.tmpl.html
+++ b/ui/html/partials/nav.tmpl.html
@@ -2,7 +2,8 @@
 <nav>
 	<ul>
 		<a href="/">Home</a>
-		<a href="/blog">Blogs</a>
+		<a href="/blogs">Blogs</a>
+		<a href="/books">Books</a>
 	</ul>
 </nav>
 {{end}}
