--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -12,7 +12,7 @@ ul {
 	padding: 0;
 }
 
-.blogLinks {
+.contentLinks {
 	display: flex;
 	flex-direction: column;
 	justify-content: left;
@@ -27,7 +27,7 @@ ul {
 .about-section > img {
 	height: 20rem;
 	width: 10rem;
-	border-radius: 2px;
+	border-radius: 3px;
 }
 
 .about-text {
