--- a/ui/html/partials/about.tmpl.html
+++ b/ui/html/partials/about.tmpl.html
@@ -6,10 +6,7 @@
 			This is a place where I'll try new out new technologies, write about
 			things such as; books, tennis and software development.
 		</p>
-		<p>
-			It's not really meant for any audience, more a of a personal
-			place/outlet - but if you do come across this, that's ok.
-		</p>
+		<p>It's a fun outlet.</p>
 	</article>
 </section>
 {{end}}
