test hosting this on flyio

--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -14,10 +14,11 @@ ul {
 
 a {
 	text-decoration: none;
+	display: inline;
 }
 
 a:hover {
-	border-bottom: solid pink;
+	text-decoration: underline pink 0.3rem;
 }
 
 .contentLinks {
